--- a/test_1002_연습장/web/styles.css
+++ b/test_1002_연습장/web/styles.css
@@ -9,7 +9,7 @@ body {
   }
 
   *{
-    /* border : 1px solid gray;/ */
+    border : 1px solid gray;/
   }
   
   .login-container, .signup-container {
