--- a/test_1002_연습장/web/Project/styles.css
+++ b/test_1002_연습장/web/Project/styles.css
@@ -8,6 +8,9 @@ body {
 }
 
 header {
+    
+    margin: 0;
+    width: 100%;
     height: 50px;
     padding: 1rem;
     color: white;
@@ -16,17 +19,23 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position : fixed;
+    top: 0; /* 헤더를 상단에 고정 */
+    z-index: 1000; /* 다른 요소 위에 표시 */
 }
+
 
 header a {
     color: white;
     text-decoration: none;
     width: 80%;
 }
-
+header nav{
+    margin: 50px;
+}
 .container {
     width: 80%;
-    margin: 50px auto;
+    margin: 100px auto;
     background-color: #f5c3c359;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -37,6 +46,18 @@ header a {
     display: block;
     
 
+}
+#registButton{
+    margin: 10px;
+    width: 70px;
+    padding: 10px;
+    background-color: #f8f3af;
+    color: rgb(0, 0, 0);
+    border:#a8a8a8 solid;
+    border-radius: 5px;
+    cursor: pointer;
+    
+    
 }
 
 #boardTable thead,
@@ -89,6 +110,7 @@ td {
 }
 
 .search-bar {
+    display: inline;
     margin-top: 10px;
     margin-bottom: 20px;
     text-align: right;
